--- a/src/App.css
+++ b/src/App.css
@@ -2530,6 +2530,11 @@ html {
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
