--- a/src/App.css
+++ b/src/App.css
@@ -2620,6 +2620,10 @@ html {
   color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
+.underline {
+  text-decoration-line: underline;
+}
+
 .opacity-0 {
   opacity: 0;
 }
